--- a/style.css
+++ b/style.css
@@ -1,1 +1,2 @@
-body{font-family:"HelveticaNeueETW01-55Rg" !important;background-color:transparent !important;line-height:175%;}
+* {font-family:"HelveticaNeueETW01-55Rg"}
+body{line-height:175%;}
