--- a/style.css
+++ b/style.css
@@ -1,18 +1,18 @@
 * {font-family:"HelveticaNeueETW01-55Rg";font-size:1em;color:#000}
 body{line-height:175%;}
 # DECLARE MEDIA
-@media screen and (min-width:1200px) {
+@media (min-width:1200px) {
     body > .container {width: 1050px;margin: 0 auto;}
 }
-@media screen and (min-width:992px) and (max-width:1199px) {
+@media (min-width:992px) and (max-width:1199px) {
     body > .container {width: 970px;margin: 0 auto;}
 }
-@media and screen (min-width:768px) and (max-width:991xp) {
+@media (min-width:768px) and (max-width:991xp) {
     body > .container {width: 710px;margin: 0 auto;}
 }
-@media and screen (min-width:480px) and (max-width:767px) {
+@media (min-width:480px) and (max-width:767px) {
     body > .container {width: 480px;margin: 0 auto;}
 }
-@media and screen (max-width:479px) {
+@media (max-width:479px) {
     body > .container {width: 360px;margin: 0 auto;}
 }
