--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 * {font-family:"HelveticaNeueETW01-55Rg";font-size:1em;color:#000}
 body{line-height:175%;}
+body > .container {border:1px solid red}
 @media (min-width:1200px) {
     body > .container {width: 1050px;margin: 0 auto;}
 }
