--- a/style.css
+++ b/style.css
@@ -1,18 +1,22 @@
 * {font-family:"HelveticaNeueETW01-55Rg";font-size:1em;color:#000}
-body{line-height:175%;}
+body{line-height:175%}
 body > .container {border:1px solid red}
+ul.menu {list-style: none;padding-left: 0}
+li.menu.level0 {width: 50%;float: left}
+li.menu.products-menu.level0,li.menu.comany-menu.level0 {text-align: center}
+li.menu.mytyphoon-menu.level0 {text-align: right}
 @media (min-width:1200px) {
-    body > .container {width: 1050px;margin: 0 auto;}
+    body > .container {width: 1050px;margin: 0 auto}
 }
 @media (min-width:992px) and (max-width:1199px) {
-    body > .container {width: 970px;margin: 0 auto;}
+    body > .container {width: 970px;margin: 0 auto}
 }
 @media (min-width:768px) and (max-width:991xp) {
-    body > .container {width: 710px;margin: 0 auto;}
+    body > .container {width: 710px;margin: 0 auto}
 }
 @media (min-width:480px) and (max-width:767px) {
-    body > .container {width: 480px;margin: 0 auto;}
+    body > .container {width: 480px;margin: 0 auto}
 }
 @media (max-width:479px) {
-    body > .container {width: 360px;margin: 0 auto;}
+    body > .container {width: 360px;margin: 0 auto}
 }
