--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {font-family:"HelveticaNeueETW01-55Rg";font-size:1em;color:#000}
 body{line-height:175%}
 body > .container {border:1px solid red}
+.logo {position: relative;float: left;width: 70px}
 ul.menu {list-style: none;padding-left: 0}
 li.menu.level0 {width: 50%;float: left}
 li.menu.products-menu.level0,li.menu.comany-menu.level0 {text-align: center}
