--- a/style.css
+++ b/style.css
@@ -4,11 +4,11 @@ body > .container {border:1px solid red}
 .logo {position: relative;float: left;width: 70px}
 ul.menu {list-style: none;padding-left: 0}
 li.menu.level0 {width: 50%;float: left}
-li.menu.products-menu.level0,li.menu.comany-menu.level0 {text-align: center}
+li.menu.products-menu.level0,li.menu.company-menu.level0 {text-align: center}
 li.menu.mytyphoon-menu.level0 {text-align: right}
 @media (min-width:1200px) {
     body > .container {width: 1050px;margin: 0 auto}
-    ul.menu{position: relative;float: left;width: 45%}
+    ul.menu{position: relative;float: left;width: 490px}
 }
 @media (min-width:992px) and (max-width:1199px) {
     body > .container {width: 970px;margin: 0 auto}
