--- a/style.css
+++ b/style.css
@@ -4,9 +4,9 @@ body > .container {border:1px solid red}
 .navigation {position: relative;float: left}
 .logo {position: relative;float: left;width: 70px}
 .logo > a {font-size: 0.65em;line-height: 0.65em;text-decoration: none}
-.logo > span {}
+.logo span {position: absolute;top: 45px}
 ul.menu {list-style: none;padding-left: 0}
-li.menu.level0 {float: left;font-size: 0.75em}
+li.menu.level0 {float: left;font-size: 0.75em;line-height: 1em}
 li.menu.products-menu.level0,li.menu.company-menu.level0 {text-align: center}
 li.menu.mytyphoon-menu.level0 {text-align: right}
 @media (min-width:1200px) {
