--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 * {font-family:"HelveticaNeueETW01-55Rg";font-size:1em;color:#000}
+html,body {margin:0;padding:0}
+html,body,.container {height:100%}
 body{line-height:175%}
 body > .container {border:1px solid red}
 .navigation {position: relative;float: left}
@@ -9,6 +11,7 @@ ul.menu {list-style: none;padding-left: 0}
 li.menu.level0 {float: left;font-size: 0.75em;line-height: 1em}
 li.menu.products-menu.level0,li.menu.company-menu.level0 {text-align: center}
 li.menu.mytyphoon-menu.level0 {text-align: right}
+.content {position: relative;margin-top: 40px;float: left;width: 100%}
 @media (min-width:1200px) {
     body > .container {width: 1050px;margin: 0 auto}
     ul.menu{position: relative;float: left;width: 490px;margin-top:40px;margin-bottom: 0}
